# fancy_mocker

./: Cargo.toml  README.md
src/: lib.rs  tests.rs
