[package]
name = "fancy_mocker"
version = "0.1.0"
authors = ["Leevi Aaltonen"]
edition = "2021"

description = "A library for transforming text into alternating uppercase and lowercase letters, resembling the Spongebob Mock Meme."
readme = "README.md"
license = "Unlicense"
repository = "https://github.com/lewskii/fancy_mocker"
keywords = ["meme"]

[dependencies]
